# spatialmath-rospy

./: .all-contributorsrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile
docs/source/: conf.py  docs.rst  guide.md  index.md  installation.md  usage.md
examples/: test.ipynb
spatialmath_rospy/: __init__.py  convert.py  convert.pyi  monkey_patch.py  monkey_patch_spatialmath.py  ros_compat_mixin.py
tests/: test_convert.py  test_monkey_patch.py  test_ros_compat_mixin.py
