[tool.poetry]
name = "spatialmath-rospy"
version = "0.0.1"
description = "Spatial Math for ROS. Library of helper functions for interfacing between rospy and spatialmath-python."
authors = ["Callum J Hays <callumjhays@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CallumJHays/spatialmath-rospy"
documentation = "https://spatialmath-rospy.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers,Engineers,Robotics,ROS Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "spatialmath_rospy" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CallumJHays/spatialmath-rospy/issues"
"Changelog" = "https://spatialmath-rospy.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = ">=2.7,<4"
spatialmath-python = ">=0.12.0,<1"
numpy = "^1.16"
tqdm = "^4.62.3"
ansitable = "^0.9.6"
scipy = "^1.7.1"
plotly = "^5.3.1"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.1.2"
tox = "^3.20.1"
pre-commit = "^2.13.0"
ipykernel = "^6.4.1"
nbformat = "^5.1.3"
ipywidgets = "^7.6.5"
jupyterlab = "^3.2.1"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "mathpad/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault"

[tool.isort]
profile = "black"
known_first_party = ["spatialmath_rospy", "tests"]
